[project]
name = "robot_mission_MAS2026"
version = "0.1.0"
description = "Multi-agent simulation of robots collecting radioactive waste"
requires-python = ">=3.10"

dependencies = [
    "mesa>=3.0",
    "matplotlib>=3.7",
    "networkx",
    "solara",
    "altair",
]

[project.scripts]
run = "run:main"

[tool.setuptools]
py-modules = ["agents", "model", "objects", "run", "server"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
